Closed Bug 1842584 Opened 2 years ago Closed 2 years ago

Intermittent Assertion failure: js::CheckGrayMarkingState(mJSRuntime), at /builds/worker/checkouts/gecko/xpcom/base/CycleCollectedJSRuntime.cpp:1596

Categories

(Core :: JavaScript: GC, defect, P5)

defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- unaffected
firefox115 --- unaffected
firefox116 --- unaffected
firefox117 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jonco)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(2 files)

Filed by: sstanca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=422109606&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/NfelRMATTNKT2X8Uw_LclA/runs/0/artifacts/public/logs/live_backing.log


[task 2023-07-10T10:29:51.937Z] 10:29:51     INFO - TEST-START | dom/serviceworkers/test/test_third_party_iframes.html
[task 2023-07-10T10:29:52.000Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: WebProgress Ignored: no longer current window global: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:3108
[task 2023-07-10T10:29:52.018Z] 10:29:52     INFO - GECKO(1144) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to C:\Users\task_168898189744322\AppData\Local\Temp\tmpmpkfxckb.mozrunner\runtests_leaks_tab_pid5328.log
[task 2023-07-10T10:29:52.234Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, GMPThread] WARNING: Failed to delete GMP storage directory: file /builds/worker/checkouts/gecko/dom/media/gmp/GMPServiceParent.cpp:1759
[task 2023-07-10T10:29:52.391Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Jump List #1] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80520012 (NS_ERROR_FILE_NOT_FOUND): file /builds/worker/checkouts/gecko/widget/windows/WinUtils.cpp:1027
[task 2023-07-10T10:29:52.533Z] 10:29:52     INFO - GECKO(1144) | JavaScript error: <loadChromeScript anonymous function>, line 3: ReferenceError: resolve is not defined
[task 2023-07-10T10:29:52.559Z] 10:29:52     INFO - GECKO(1144) | JavaScript error: resource://gre/modules/ClearDataService.sys.mjs, line 1794: NS_ERROR_XPC_JAVASCRIPT_ERROR_WITH_DETAILS: [JavaScript Error: "resolve is not defined" {file: "<loadChromeScript anonymous function>" line: 3}]'[JavaScript Error: "resolve is not defined" {file: "<loadChromeScript anonymous function>" line: 3}]' when calling method: [nsIClearDataCallback::onDataDeleted]
[task 2023-07-10T10:29:52.595Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Jump List #1] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80520012 (NS_ERROR_FILE_NOT_FOUND): file /builds/worker/checkouts/gecko/widget/windows/WinUtils.cpp:1027
[task 2023-07-10T10:29:52.616Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: NS_ENSURE_TRUE(she && she->mInfo->mSharedState.Get()) failed: file /builds/worker/checkouts/gecko/docshell/shistory/SessionHistoryEntry.cpp:1156
[task 2023-07-10T10:29:52.704Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: WebProgress Ignored: no longer current window global: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:3108
[task 2023-07-10T10:29:52.725Z] 10:29:52     INFO - GECKO(1144) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to C:\Users\task_168898189744322\AppData\Local\Temp\tmpmpkfxckb.mozrunner\runtests_leaks_tab_pid4288.log
[task 2023-07-10T10:29:52.861Z] 10:29:52     INFO - GECKO(1144) | [Child 4288, Main Thread] WARNING: 'storageAllowed != StorageAccess::eAllow && (!StaticPrefs::privacy_partition_serviceWorkers() || !StoragePartitioningEnabled(storageAllowed, doc->CookieJarSettings()))', file /builds/worker/checkouts/gecko/dom/serviceworkers/ServiceWorkerContainer.cpp:731
[task 2023-07-10T10:29:52.908Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: Received `load` event on unbridged BrowserParent!: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:4016
[task 2023-07-10T10:29:52.909Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: Received `load` event on unbridged BrowserParent!: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:4016
[task 2023-07-10T10:29:52.924Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: Not resolving response 'PContent::Reply_GetModulesTrust': actor is dead: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:796
[task 2023-07-10T10:29:52.939Z] 10:29:52     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: NS_ENSURE_TRUE(she && she->mInfo->mSharedState.Get()) failed: file /builds/worker/checkouts/gecko/docshell/shistory/SessionHistoryEntry.cpp:1156
[task 2023-07-10T10:29:52.958Z] 10:29:52     INFO - GECKO(1144) | got message {"source":"parent","href":"http://mochi.test:8888/tests/dom/serviceworkers/test/thirdparty/iframe2.html"}
[task 2023-07-10T10:29:52.986Z] 10:29:52     INFO - GECKO(1144) | got message {"source":"iframe","status":"networkresponse"}
[task 2023-07-10T10:29:53.020Z] 10:29:53     INFO - GECKO(1144) | got message {"source":"worker","status":"worker-networkresponse"}
[task 2023-07-10T10:29:53.033Z] 10:29:53     INFO - GECKO(1144) | got message {"source":"parent","href":"https://example.com/tests/dom/serviceworkers/test/thirdparty/iframe2.html"}
[task 2023-07-10T10:29:53.080Z] 10:29:53     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: WebProgress Ignored: no longer current window global: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:3108
[task 2023-07-10T10:29:53.111Z] 10:29:53     INFO - GECKO(1144) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to C:\Users\task_168898189744322\AppData\Local\Temp\tmpmpkfxckb.mozrunner\runtests_leaks_tab_pid2276.log
[task 2023-07-10T10:29:53.252Z] 10:29:53     INFO - GECKO(1144) | got message {"source":"iframe","status":"networkresponse"}
[task 2023-07-10T10:29:53.331Z] 10:29:53     INFO - GECKO(1144) | got message {"source":"worker","status":"worker-networkresponse"}
[task 2023-07-10T10:29:53.582Z] 10:29:53     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: NS_ENSURE_TRUE(she && she->mInfo->mSharedState.Get()) failed: file /builds/worker/checkouts/gecko/docshell/shistory/SessionHistoryEntry.cpp:1156
[task 2023-07-10T10:29:53.629Z] 10:29:53     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: WebProgress Ignored: no longer current window global: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:3108
[task 2023-07-10T10:29:53.653Z] 10:29:53     INFO - GECKO(1144) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to C:\Users\task_168898189744322\AppData\Local\Temp\tmpmpkfxckb.mozrunner\runtests_leaks_tab_pid6468.log
[task 2023-07-10T10:29:53.895Z] 10:29:53     INFO - GECKO(1144) | [Parent 7076, DOMCacheThread] WARNING: QM_TRY failure (WARNING): '"ToResult(file->Remove( false))" failed with resultCode 0x80520012, resultName NS_ERROR_FILE_NOT_FOUND', file dom/cache/FileUtils.cpp:774
[task 2023-07-10T10:29:53.900Z] 10:29:53     INFO - GECKO(1144) | [Parent 7076, DOMCacheThread] WARNING: QM_TRY failure (WARNING): '"ToResult(file->Remove( false))" failed with resultCode 0x80520012, resultName NS_ERROR_FILE_NOT_FOUND', file dom/cache/FileUtils.cpp:774
[task 2023-07-10T10:29:53.942Z] 10:29:53     INFO - GECKO(1144) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to C:\Users\task_168898189744322\AppData\Local\Temp\tmpmpkfxckb.mozrunner\runtests_leaks_tab_pid8860.log
[task 2023-07-10T10:29:54.161Z] 10:29:54     INFO - GECKO(1144) | [Child 5328, Main Thread] WARNING: IPC message 'PWindowGlobal::Msg_UpdateBFCacheStatus' discarded: actor cannot send: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:508
[task 2023-07-10T10:29:54.256Z] 10:29:54     INFO - GECKO(1144) | [Child 6468, Main Thread] WARNING: NS_ENSURE_TRUE(!mHasOrHasHadOwnerWindow || mOwnerWindow) failed: file /builds/worker/checkouts/gecko/dom/events/DOMEventTargetHelper.cpp:302
[task 2023-07-10T10:29:54.303Z] 10:29:54     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: NS_ENSURE_TRUE(she && she->mInfo->mSharedState.Get()) failed: file /builds/worker/checkouts/gecko/docshell/shistory/SessionHistoryEntry.cpp:1156
[task 2023-07-10T10:29:54.365Z] 10:29:54     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: NS_ENSURE_TRUE(she && she->mInfo->mSharedState.Get()) failed: file /builds/worker/checkouts/gecko/docshell/shistory/SessionHistoryEntry.cpp:1156
[task 2023-07-10T10:29:54.391Z] 10:29:54     INFO - GECKO(1144) | got message {"source":"parent","href":"http://mochi.test:8888/tests/dom/serviceworkers/test/thirdparty/iframe2.html"}
[task 2023-07-10T10:29:54.412Z] 10:29:54     INFO - GECKO(1144) | got message {"source":"iframe","status":"networkresponse"}
[task 2023-07-10T10:29:54.432Z] 10:29:54     INFO - GECKO(1144) | got message {"source":"worker","status":"worker-networkresponse"}
[task 2023-07-10T10:29:54.439Z] 10:29:54     INFO - GECKO(1144) | got message {"source":"parent","href":"https://example.com/tests/dom/serviceworkers/test/thirdparty/iframe2.html"}
[task 2023-07-10T10:29:54.459Z] 10:29:54     INFO - GECKO(1144) | [Parent 7076, Main Thread] WARNING: WebProgress Ignored: no longer current window global: file /builds/worker/checkouts/gecko/dom/ipc/BrowserParent.cpp:3108
[task 2023-07-10T10:29:54.489Z] 10:29:54     INFO - GECKO(1144) | ### XPCOM_MEM_BLOAT_LOG defined -- logging bloat/leaks to C:\Users\task_168898189744322\AppData\Local\Temp\tmpmpkfxckb.mozrunner\runtests_leaks_tab_pid2564.log
[task 2023-07-10T10:29:54.584Z] 10:29:54     INFO - GECKO(1144) | Found black to gray edge to gray JS Shape 24DC6C40
[task 2023-07-10T10:29:54.598Z] 10:29:54     INFO - GECKO(1144) |   from black JS JitCode 2890C080 jit-masm-ptr edge
<...>
[task 2023-07-10T10:29:54.646Z] 10:29:54     INFO - GECKO(1144) |   from root Preserved wrapper
[task 2023-07-10T10:29:54.822Z] 10:29:54     INFO - GECKO(1144) | Assertion failure: js::CheckGrayMarkingState(mJSRuntime), at /builds/worker/checkouts/gecko/xpcom/base/CycleCollectedJSRuntime.cpp:1596
[task 2023-07-10T10:29:55.163Z] 10:29:55     INFO -  Initializing stack-fixing for the first stack frame, this may take a while...
[task 2023-07-10T10:30:16.030Z] 10:30:16     INFO - GECKO(1144) | #01: mozilla::CycleCollectedJSRuntime::CheckGrayBits() const [xpcom/base/CycleCollectedJSRuntime.cpp:1596]
[task 2023-07-10T10:30:16.034Z] 10:30:16     INFO - GECKO(1144) | #02: nsCycleCollector::BeginCollection(mozilla::CCReason, ccIsManual, nsICycleCollectorListener*) [xpcom/base/nsCycleCollector.cpp:3660]
[task 2023-07-10T10:30:16.035Z] 10:30:16     INFO - GECKO(1144) | #03: nsCycleCollector::Collect(mozilla::CCReason, ccIsManual, js::SliceBudget&, nsICycleCollectorListener*, bool) [xpcom/base/nsCycleCollector.cpp:3484]
[task 2023-07-10T10:30:16.035Z] 10:30:16     INFO - GECKO(1144) | #04: nsCycleCollector_collectSlice(js::SliceBudget&, mozilla::CCReason, bool) [xpcom/base/nsCycleCollector.cpp:4011]
[task 2023-07-10T10:30:16.035Z] 10:30:16     INFO - GECKO(1144) | #05: nsJSContext::RunCycleCollectorSlice(mozilla::CCReason, mozilla::TimeStamp) [dom/base/nsJSEnvironment.cpp:1465]
[task 2023-07-10T10:30:16.036Z] 10:30:16     INFO - GECKO(1144) | #06: mozilla::CCGCScheduler::CCRunnerFired(mozilla::TimeStamp) [dom/base/nsJSEnvironment.cpp:1621]
[task 2023-07-10T10:30:16.036Z] 10:30:16     INFO - GECKO(1144) | #07: std::_Func_impl_no_alloc<bool (*)(mozilla::TimeStamp),bool,mozilla::TimeStamp>::_Do_call(mozilla::TimeStamp&&) [/builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/functional:822]
[task 2023-07-10T10:30:16.037Z] 10:30:16     INFO - GECKO(1144) | #08: mozilla::IdleTaskRunner::Run() [xpcom/threads/IdleTaskRunner.cpp:134]
[task 2023-07-10T10:30:16.037Z] 10:30:16     INFO - GECKO(1144) | #09: mozilla::IdleTaskRunnerTask::Run() [xpcom/threads/IdleTaskRunner.cpp:47]
[task 2023-07-10T10:30:16.037Z] 10:30:16     INFO - GECKO(1144) | #10: mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex &> const&) [xpcom/threads/TaskController.cpp:880]
[task 2023-07-10T10:30:16.038Z] 10:30:16     INFO - GECKO(1144) | #11: mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex &> const&) [xpcom/threads/TaskController.cpp:746]
[task 2023-07-10T10:30:16.038Z] 10:30:16     INFO - GECKO(1144) | #12: mozilla::TaskController::ProcessPendingMTTask(bool) [xpcom/threads/TaskController.cpp:491]
[task 2023-07-10T10:30:16.039Z] 10:30:16     INFO - GECKO(1144) | #13: mozilla::detail::RunnableFunction<`lambda at /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:218:7'>::Run() [xpcom/threads/nsThreadUtils.h:549]
[task 2023-07-10T10:30:16.039Z] 10:30:16     INFO - GECKO(1144) | #14: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1203]
[task 2023-07-10T10:30:16.039Z] 10:30:16     INFO - GECKO(1144) | #15: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:480]
[task 2023-07-10T10:30:16.040Z] 10:30:16     INFO - GECKO(1144) | #16: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:85]
[task 2023-07-10T10:30:16.040Z] 10:30:16     INFO - GECKO(1144) | #17: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:370]
[task 2023-07-10T10:30:16.041Z] 10:30:16     INFO - GECKO(1144) | #18: MessageLoop::RunHandler() [ipc/chromium/src/base/message_loop.cc:364]
[task 2023-07-10T10:30:16.041Z] 10:30:16     INFO - GECKO(1144) | #19: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:346]
[task 2023-07-10T10:30:16.041Z] 10:30:16     INFO - GECKO(1144) | #20: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:150]
[task 2023-07-10T10:30:16.042Z] 10:30:16     INFO - GECKO(1144) | #21: nsAppShell::Run() [widget/windows/nsAppShell.cpp:620]
[task 2023-07-10T10:30:16.042Z] 10:30:16     INFO - GECKO(1144) | #22: nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:296]
[task 2023-07-10T10:30:16.042Z] 10:30:16     INFO - GECKO(1144) | #23: XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:5661]
[task 2023-07-10T10:30:16.043Z] 10:30:16     INFO - GECKO(1144) | #24: XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5862]
[task 2023-07-10T10:30:16.043Z] 10:30:16     INFO - GECKO(1144) | #25: XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/nsAppRunner.cpp:5918]
[task 2023-07-10T10:30:16.043Z] 10:30:16     INFO - GECKO(1144) | #26: mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&) [toolkit/xre/Bootstrap.cpp:45]
[task 2023-07-10T10:30:16.093Z] 10:30:16     INFO - GECKO(1144) | #27: NS_internal_main(int, char**, char**) [browser/app/nsBrowserApp.cpp:445]
[task 2023-07-10T10:30:16.108Z] 10:30:16     INFO - GECKO(1144) | #28: wmain(int, wchar_t**) [toolkit/xre/nsWindowsWMain.cpp:167]
[task 2023-07-10T10:30:16.109Z] 10:30:16     INFO - GECKO(1144) | #29: __scrt_common_main_seh() [/builds/worker/workspace/obj-build/browser/app/D:/a/_work/1/s/src/vctools/crt/vcstartup/src/startup/exe_common.inl:288]
[task 2023-07-10T10:30:16.112Z] 10:30:16     INFO -  fix-stacks: error: failed to read debug info file `wkernel32.pdb` for `C:\Windows\System32\KERNEL32.DLL`
[task 2023-07-10T10:30:16.112Z] 10:30:16     INFO -  fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-07-10T10:30:16.112Z] 10:30:16     INFO -  fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-07-10T10:30:16.113Z] 10:30:16     INFO - GECKO(1144) | #30: BaseThreadInitThunk [C:\Windows\System32\KERNEL32.DLL + 0x17d49]
[task 2023-07-10T10:30:16.171Z] 10:30:16     INFO -  fix-stacks: error: failed to read debug info file `wntdll.pdb` for `C:\Windows\SYSTEM32\ntdll.dll`
[task 2023-07-10T10:30:16.185Z] 10:30:16     INFO -  fix-stacks: note: this is expected and harmless for all PDB files on opt automation runs
[task 2023-07-10T10:30:16.185Z] 10:30:16     INFO -  fix-stacks: The system cannot find the file specified. (os error 2)
[task 2023-07-10T10:30:16.185Z] 10:30:16     INFO - GECKO(1144) | #31: RtlInitializeExceptionChain [C:\Windows\SYSTEM32\ntdll.dll + 0x6b74b]
[task 2023-07-10T10:30:16.186Z] 10:30:16     INFO - GECKO(1144) | #32: RtlClearBits [C:\Windows\SYSTEM32\ntdll.dll + 0x6b6cf]
[task 2023-07-10T10:30:16.186Z] 10:30:16     INFO - GECKO(1144) | [GPU 3248, IPC I/O Child] WARNING: [A16884A3CFF67518.C9C998065FA643EC]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-07-10T10:30:16.187Z] 10:30:16     INFO - GECKO(1144) | [GPU 3248, IPC I/O Child] WARNING: [A16884A3CFF67518.C9C998065FA643EC]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-07-10T10:30:16.187Z] 10:30:16     INFO - GECKO(1144) | [GPU 3248, IPC I/O Child] WARNING: [A16884A3CFF67518.C9C998065FA643EC]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-07-10T10:30:16.188Z] 10:30:16     INFO - GECKO(1144) | [GPU 3248, IPC I/O Child] WARNING: [A16884A3CFF67518.C9C998065FA643EC]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-07-10T10:30:16.189Z] 10:30:16     INFO - GECKO(1144) | [GPU 3248, IPC I/O Child] WARNING: [A16884A3CFF67518.C9C998065FA643EC]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-07-10T10:30:16.189Z] 10:30:16     INFO - GECKO(1144) | [GPU 3248, IPC I/O Child] WARNING: [A16884A3CFF67518.C9C998065FA643EC]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-07-10T10:30:16.190Z] 10:30:16     INFO - GECKO(1144) | [GPU 3248, IPC I/O Child] WARNING: [A16884A3CFF67518.C9C998065FA643EC]: Ignoring message 'EVENT_MESSAGE' to peer 1.1 due to a missing broker: file /builds/worker/checkouts/gecko/ipc/glue/NodeController.cpp:352
[task 2023-07-10T10:30:16.190Z] 10:30:16     INFO - GECKO(1144) | [GPU 3248, Main Thread] WARNING: Shutting down GPU process early due to a crash!: file /builds/worker/checkouts/gecko/gfx/ipc/GPUParent.cpp:665
[task 2023-07-10T10:30:16.191Z] 10:30:16     INFO - TEST-INFO | Main app process: exit 1

Weird, I haven't seen this assertion actually go off before. I'll move this to the GC component, because while the assertion runs during the cycle collector I think it indicates an issue with gray marking from the GC.

Component: XPCOM → JavaScript: GC
Attached file full error log

Here's the full error log in case the tree herder log expires.

Flags: needinfo?(jcoppeard)

It looks like this assertion has happened before, in at least 2019: bug 1399866.

See Also: → 1399866

This is almost certainly due to bug 1837620 which made some script -> shape edges weak. Weak black -> gray edges are OK themselves, but the "jit-masm-ptr" edge this is complaining about is not a weak edge. I think we are missing an expose call when creating a snapshot of the cache IR.

Flags: needinfo?(jcoppeard)
Keywords: regression
Regressed by: 1837620

Tier 1 failure here.

Summary: Intermittent [tier 2] Assertion failure: js::CheckGrayMarkingState(mJSRuntime), at /builds/worker/checkouts/gecko/xpcom/base/CycleCollectedJSRuntime.cpp:1596 → Intermittent Assertion failure: js::CheckGrayMarkingState(mJSRuntime), at /builds/worker/checkouts/gecko/xpcom/base/CycleCollectedJSRuntime.cpp:1596
Assignee: nobody → jcoppeard

Currently there's a read barrier in WarpScriptOracle::maybeInlineIC but this
only handles making things safe for incremental GC, it doesn't handle gray
unmarking.

This is necessary because while black -> gray weak edges are OK (the edge will be
cleared if the target dies), here we are taking the target of a weak edge and
making a strong edge to it. We need to expose to do gray unmarking at this
point otherwise we can create a strong black -> gray edge.

Set release status flags based on info from the regressing bug 1837620

Pushed by jcoppeard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/726f68b72d87 Expose the targets of weak references in cache IR stubs when creating snapshots r=jandem
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: