Bug 1842584 - Expose the targets of weak references in cache IR stubs when creating snapshots r=jandem

Currently there's a read barrier in WarpScriptOracle::maybeInlineIC but this
only handles making things safe for incremental GC, it doesn't handle gray
unmarking.

This is necessary because while black -> gray weak edges are OK (the edge will be
cleared if the target dies), here we are taking the target of a weak edge and
making a strong edge to it. We need to expose to do gray unmarking at this
point otherwise we can create a strong black -> gray edge.

Differential Revision: https://phabricator.services.mozilla.com/D183171